lec3_step2/lec3_step2.txt
+*In[1]:*+
[source, ipython3]
----
## Python basics for novice data scientists, supported by Wagatsuma Lab@Kyutech 
#
# The MIT License (MIT): Copyright (c) 2020 Hiroaki Wagatsuma and Wagatsuma Lab@Kyutech
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
# The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. */
#
# # @Time    : 2022-8-20 
# # @Author  : Hiroaki Wagatsuma
# # @Site    : https://github.com/hirowgit/2A1_python_intermediate_course
# # @IDE     : Python 3.9.13 (main, Aug  7 2022, 01:33:23) [Clang 13.1.6 (clang-1316.0.21.2.5)] on darwin
# # @File    : lec3_step2.py 
----


+*In[8]:*+
[source, ipython3]
----
import numpy as np
prFill=np.array([90, 60, 50, 50, 50, 90, 40, 30, 80, 40, 20])
prFill=prFill/100
print(prFill)
----


+*Out[8]:*+
----
[0.9 0.6 0.5 0.5 0.5 0.9 0.4 0.3 0.8 0.4 0.2]
----


+*In[17]:*+
[source, ipython3]
----
a=[10,20,30]
print(a)
for d in a:
    print(d/10)
for i in range(len(a)):
    print(a[i]/10)
----


+*Out[17]:*+
----
[10, 20, 30]
1.0
2.0
3.0
1.0
2.0
3.0
----


+*In[139]:*+
[source, ipython3]
----
import numpy as np
#prFill=[90    60    50    50    50    90    40    30    80    40  20 ]/100;
prFill=np.array([90, 60, 50, 50, 50, 90, 40, 30, 80, 40, 20])
prFill=prFill/100
print(prFill)
----


+*Out[139]:*+
----
[0.9 0.6 0.5 0.5 0.5 0.9 0.4 0.3 0.8 0.4 0.2]
----


+*In[18]:*+
[source, ipython3]
----
# fillLine=boolean(ones(1,size(prFill,2)));
# を1行で書く方法
fillLine=np.full(len(prFill),True)
print(fillLine)
----


+*Out[18]:*+
----
[ True  True  True  True  True  True  True  True  True  True  True]
----


+*In[3]:*+
[source, ipython3]
----
# fillLine=boolean(ones(1,size(prFill,2)));
# を1行で書く方法
NofD=len(prFill)
fillLine=np.full(NofD,True)
print(fillLine)
----


+*Out[3]:*+
----
[ True  True  True  True  True  True  True  True  True  True  True]
----


+*In[88]:*+
[source, ipython3]
----
# fillLine=boolean(ones(1,size(prFill,2)));
# を1行で書く方法 :これは階層構造になるので、x
fillLine=np.full(( 1,len(prFill)),True)
print(fillLine)
----


+*Out[88]:*+
----
[[ True  True  True  True  True  True  True  True  True  True  True]]
----


+*In[23]:*+
[source, ipython3]
----
# 行で書く方法
fillLine2=np.empty(len(prFill), dtype = bool) 
fillLine2[:]=True  #スライシング機能
print(fillLine2)
----


+*Out[23]:*+
----
[ True  True  True  True  True  True  True  True  True  True  True]
----


+*In[41]:*+
[source, ipython3]
----
a=np.zeros((2,3))
print(a)
print(len(a))
print(a.size)
print(a.ndim)
print(a.shape)
----


+*Out[41]:*+
----
[[0. 0. 0.]
 [0. 0. 0.]]
2
6
2
(2, 3)
----


+*In[19]:*+
[source, ipython3]
----
b=np.argwhere(prFill>0.8)
print(b)
print(b.shape)
----


+*Out[19]:*+
----
[[0]
 [5]]
(2, 1)
----


+*In[143]:*+
[source, ipython3]
----
prFill
----


+*Out[143]:*+
----array([0.9, 0.6, 0.5, 0.5, 0.5, 0.9, 0.4, 0.3, 0.8, 0.4, 0.2])----


+*In[152]:*+
[source, ipython3]
----
c=np.where(prFill>0.8)
print(c)
print(np.shape(c))
----


+*Out[152]:*+
----
(array([0, 5]),)
(1, 2)
----


+*In[47]:*+
[source, ipython3]
----
np.argwhere((prFill>0.8) & fillLine)
----


+*Out[47]:*+
----array([[0, 0],
       [0, 5]])----


+*In[156]:*+
[source, ipython3]
----
fillLine[5]=False
np.where((prFill>0.8) & fillLine)
----


+*Out[156]:*+
----(array([0]),)----


+*In[158]:*+
[source, ipython3]
----
fillLine
----


+*Out[158]:*+
----array([ True,  True,  True,  True,  True, False,  True,  True,  True,
        True,  True])----


+*In[159]:*+
[source, ipython3]
----
prFill
----


+*Out[159]:*+
----array([0.9, 0.6, 0.5, 0.5, 0.5, 0.9, 0.4, 0.3, 0.8, 0.4, 0.2])----


+*In[54]:*+
[source, ipython3]
----
prFill[(prFill>0.8) ]
----


+*Out[54]:*+
----array([0.9, 0.9])----


+*In[55]:*+
[source, ipython3]
----
np.where((prFill>0.8) & (prFill>=0.8))
----


+*Out[55]:*+
----(array([0, 5]),)----


+*In[90]:*+
[source, ipython3]
----
b=np.where(np.logical_and(prFill>0.8,fillLine))
print(b)
print(len(b))
----


+*Out[90]:*+
----
(array([0, 5]),)
1
----


+*In[69]:*+
[source, ipython3]
----
b2=np.unique(b)
print(b2)
----


+*Out[69]:*+
----
[0 5]
----


+*In[71]:*+
[source, ipython3]
----
b2[0]
----


+*Out[71]:*+
----0----


+*In[91]:*+
[source, ipython3]
----
print(fillLine[3:-1])

----


+*Out[91]:*+
----
[ True  True  True  True  True  True  True]
----


+*In[135]:*+
[source, ipython3]
----
i=3
np.where((prFill[i+1:-1]>0.8) & fillLine[i+1:-1])

----


+*Out[135]:*+
----(array([1]),)----


+*In[137]:*+
[source, ipython3]
----
i=3
remF=0.5
IDrem=np.where((prFill[i+1:-1]>remF) & fillLine[i+1:-1])
print(IDrem)
----


+*Out[137]:*+
----
(array([1, 4]),)
----


+*In[134]:*+
[source, ipython3]
----
a=np.empty(0)
print(a)
a.append([0,1])
print(a)
np.append(a,np.array([4])
print(a)
np.append(a,np.array([1,2,3])

----


+*Out[134]:*+
----

      File "<ipython-input-134-26a9b3048070>", line 6
        print(a)
        ^
    SyntaxError: invalid syntax


----


+*In[20]:*+
[source, ipython3]
----
a=[]
print(a)
a.append([0,1])
print(a)
a.append([1,2,3])
print(a)
----


+*Out[20]:*+
----
[]
[[0, 1]]
[[0, 1], [1, 2, 3]]
----


+*In[129]:*+
[source, ipython3]
----
gg=[[1,2],[0,1,2],[5]]
print(gg)
print(gg[0])
gg.append([1,2,1,1,3])
print(gg)
----


+*Out[129]:*+
----
[[1, 2], [0, 1, 2], [5]]
[1, 2]
[[1, 2], [0, 1, 2], [5], [1, 2, 1, 1, 3]]
----


+*In[11]:*+
[source, ipython3]
----
np.array([[1,2,3],[4,5,6]])
----


+*Out[11]:*+
----array([[1, 2, 3],
       [4, 5, 6]])----


+*In[12]:*+
[source, ipython3]
----
np.array([[1,2,3],[4,5]])
----


+*Out[12]:*+
----
/var/folders/mg/w5t8lkhc8xj79f001s7kzpfh0000gp/T/ipykernel_46824/4191096310.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.
  np.array([[1,2,3],[4,5]])
array([list([1, 2, 3]), list([4, 5])], dtype=object)----


+*In[16]:*+
[source, ipython3]
----
np.array([['a','a'],['b','b']])
----


+*Out[16]:*+
----array([['a', 'a'],
       ['b', 'b']], dtype='<U1')----


+*In[17]:*+
[source, ipython3]
----
np.array([['a','a'],['b','b','c']])
----


+*Out[17]:*+
----
/var/folders/mg/w5t8lkhc8xj79f001s7kzpfh0000gp/T/ipykernel_46824/3154860643.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.
  np.array([['a','a'],['b','b','c']])
array([list(['a', 'a']), list(['b', 'b', 'c'])], dtype=object)----


+*In[28]:*+
[source, ipython3]
----
d=[[1,2,3],[4,5]]
print(d)
----


+*Out[28]:*+
----
[[1, 2, 3], [4, 5]]
----


+*In[29]:*+
[source, ipython3]
----
d[0]
----


+*Out[29]:*+
----[1, 2, 3]----


+*In[30]:*+
[source, ipython3]
----
d[0][2]
----


+*Out[30]:*+
----3----


+*In[18]:*+
[source, ipython3]
----
[['a','a'],['b','b','c']]
----


+*Out[18]:*+
----[['a', 'a'], ['b', 'b', 'c']]----


+*In[23]:*+
[source, ipython3]
----
c=['aa','bbc']
print(c)
----


+*Out[23]:*+
----
['aa', 'bbc']
----


+*In[25]:*+
[source, ipython3]
----
c[0]
----


+*Out[25]:*+
----'aa'----


+*In[26]:*+
[source, ipython3]
----
c[1][2]
----


+*Out[26]:*+
----'c'----


+*In[40]:*+
[source, ipython3]
----
import sympy as sym
----


+*In[85]:*+
[source, ipython3]
----
A =sym.MatrixSymbol('a',2,2)
b =sym.MatrixSymbol('b',2,1)
A.as_explicit()
----


+*Out[85]:*+
----Matrix([
[a[0, 0], a[0, 1]],
[a[1, 0], a[1, 1]]])----


+*In[87]:*+
[source, ipython3]
----
b.as_explicit()
----


+*Out[87]:*+
----Matrix([
[b[0, 0]],
[b[1, 0]]])----


+*In[86]:*+
[source, ipython3]
----
y=A*b
y.as_explicit()
----


+*Out[86]:*+
----Matrix([
[a[0, 0]*b[0, 0] + a[0, 1]*b[1, 0]],
[a[1, 0]*b[0, 0] + a[1, 1]*b[1, 0]]])----


+*In[91]:*+
[source, ipython3]
----
sym.init_printing
----


+*Out[91]:*+
----<function sympy.interactive.printing.init_printing(pretty_print=True, order=None, use_unicode=None, use_latex=None, wrap_line=None, num_columns=None, no_global=False, ip=None, euler=False, forecolor=None, backcolor='Transparent', fontsize='10pt', latex_mode='plain', print_builtin=True, str_printer=None, pretty_printer=None, latex_printer=None, scale=1.0, **settings)>----


+*In[65]:*+
[source, ipython3]
----
A=sym.Matrix([[1, 2], [3, 4]])
A
----


+*Out[65]:*+
----Matrix([
[1, 2],
[3, 4]])----


+*In[64]:*+
[source, ipython3]
----
b=sym.Matrix([[5], [6]])
b
----


+*Out[64]:*+
----Matrix([
[5],
[6]])----


+*In[66]:*+
[source, ipython3]
----
A*b
----


+*Out[66]:*+
----Matrix([
[17],
[39]])----


+*In[74]:*+
[source, ipython3]
----
sym.MatrixSymbol('a',2,2)*sym.MatrixSymbol('b',2,1)[1]
----


+*Out[74]:*+
----b[1, 0]*a----


+*In[ ]:*+
[source, ipython3]
----

----
